Update and rename Корреляция и корреляционный анализя.ipynb to Задачи на корреляцию  корреляционный анализ.ipynb

--- a/Задачи на корреляцию  корреляционный анализ.ipynb
+++ b/Задачи на корреляцию  корреляционный анализ.ipynb
@@ -40,7 +40,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Возьмите датасет Mortality and Water Hardness**\n",
+        "датасет Mortality and Water Hardness**\n",
         "www.kaggle.com...r-hardness\n",
         "\n",
         "В этом датасете содержатся данные по средней годовой смертности на\n",
@@ -48,19 +48,19 @@
         "большого города в Англии и Уэльсе. Города дополнительно поделены на\n",
         "северные и южные.\n",
         "\n",
-        "Задание 1.\n",
-        "Ответить на вопрос: есть ли связь между жёсткостью воды и средней годовой смертностью?\n",
+        "Задача 1.\n",
+        "Вопрос: есть ли связь между жёсткостью воды и средней годовой смертностью?\n",
         "\n",
         "Построить точечный график\n",
         "Рассчитать коэффициенты корреляции Пирсона и Спирмена\n",
         "Построить модель линейной регрессии\n",
         "Рассчитать коэффициент детерминации\n",
         "Вывести график остатков\n",
-        "Задание 2.\n",
-        "Ответить на вопрос: сохраняется ли аналогичная зависимость для северных и южных городов по отдельности?\n",
+        "Задача 2.\n",
+        "Вопрос: сохраняется ли аналогичная зависимость для северных и южных городов по отдельности?\n",
         "\n",
         "Разделить данные на 2 группы\n",
-        "Повторить аналогичные шаги из пункта 1 для каждой группы по отдельности"
+     
       ],
       "metadata": {
         "id": "2VBO51tPcFUJ"
